<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    tools:context="com.zielinski.kacper.bikeshopcard.MainActivity">

    <ImageView
        android:contentDescription="@string/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scaleType="centerCrop"
        android:src="@drawable/bike"/>

    <LinearLayout
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            style="@style/textStyle"
            android:textSize="60sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showMap"
            android:text="@string/address" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:contentDescription="@string/telephone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="dialPhoneNumber"
                android:src="@android:drawable/sym_action_call" />

            <TextView
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="dialPhoneNumber"
                android:text="@string/telephone_number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:contentDescription="@string/domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_web" />

            <TextView
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textColorLink="@android:color/white"
                android:text="@string/domain" />

        </LinearLayout>

        <TextView
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opening_hours" />

    </LinearLayout>
</LinearLayout>